# outboxlab

./: .env.example  .gitignore  Makefile  README.md
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_baseline.py
apps/api/app/: config.py  main.py
apps/api/app/campaign/infrastructure/db/: models.py
apps/api/app/identity/application/ports/: workspace_repository.py
apps/api/app/identity/application/queries/: get_my_workspace.py
apps/api/app/identity/domain/: workspace.py
apps/api/app/identity/infrastructure/: seed.py
apps/api/app/identity/infrastructure/db/: models.py
apps/api/app/identity/infrastructure/persistence/: workspace_repo.py
apps/api/app/identity/presentation/routes/: __init__.py  workspaces.py
apps/api/app/shared/application/: context.py
apps/api/app/shared/infrastructure/db/: engine.py  session.py
apps/api/app/shared/presentation/: middleware.py
apps/api/app/shared/presentation/routes/: __init__.py  debug.py  version.py
apps/api/app/shared/util/: clock.py
apps/api/tests/integration/: conftest.py
apps/api/tests/integration/identity/: test_get_my_workspace_handler.py  test_rls_empty_guc_regression.py  test_workspace_isolation.py  test_workspace_repo.py
apps/api/tests/integration/shared/: test_db_connectivity.py  test_endpoints_db.py  test_migrations.py
apps/api/tests/unit/identity/: test_workspace_endpoint.py  test_workspace_entity.py
apps/api/tests/unit/shared/: test_config.py  test_engine_url.py  test_version_endpoint.py
apps/worker-py/: main.py  pyproject.toml
(+16 files in other folders)
