[project]
name = "outboxlab-api"
version = "0.0.1"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.115",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx2>=2.2",
    "pyright>=1.1.390",
    "ruff>=0.15",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: tests that require a live Postgres",
]
testpaths = ["tests"]

[tool.pyright]
include = ["app", "tests"]
exclude = ["**/__pycache__", "**/.venv", "alembic/versions"]
pythonVersion = "3.14"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportMissingImports = "error"
reportUnusedImport = "warning"
